style.css
* {
	box-sizing: border-box;
}

body {
	margin: 0;
	width: 100%;
	height: 100%;
	font-family: sans-serif;
	font-size: 16px;
	color: rgba(0,0,0,0.33);
}

.loader {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 100;
}

.loader img {
	width: 150px;
	height: 150px;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.loading .header,
.loading .container
{
	opacity: 0;
}

.header,
.container,
.page
{
	max-width: 500px;
	width: calc(100% - 100px) !important;
	left: 50%;
	transform: translate(-50%, 0);
	opacity: 1;
	transition: opacity 0.2s;
}

.header {
	height: 50px;
	position: fixed;
	z-index: 2;
	top: 50px;
}

.logo {
	height: 25px;
	opacity: 0.33;
	margin-left: 10px;
	position: absolute;
	top: 0;
	left: 0;
}

.logo.line {
	opacity: 0;
}

.icon {
	width: 50px;
	height: 50px;
	position: absolute;
	right: 0;
	top: -10px;
}

.icon.flat,
.icon.line.white
{
	opacity: 0;
}

.header:hover .icon.flat {
	opacity: 1;
}

.breakpoint .logo {
	opacity: 0;
}

.breakpoint .logo.line {
	opacity: 1;
}

.breakpoint .icon.line {
	opacity: 0;
}

.breakpoint .icon.line.white {
	opacity: 1;
}

.container {
	top: 100px;
	position: absolute;
	margin-bottom: 50px;
}

.section {
	width: 100%;
	display: flex;
	transition: opacity 0.1s;
}

.section.info {
	padding: 10px;
	position: relative;
}

.links {
	margin-top: 20px;
	width: 100%;
}

.icon-link {
	width: 25%;
	margin-right: 10px;
	display: inline-block;
	transition: opacity 0.2s, transform 0.2s;
}

.icon-link:last-child {
	margin-right: 0;
}

.icon-link img {
	width: 100%;
}

.icon-link:hover {
	opacity: 0.8;
	transform: translate(0, -3px);
}

.section.fill {
	flex: 1 1 0;
}

.section.fill.double {
	flex: 2 1 0;
}

.half-height {
	height: 300px;
}

.full-height {
	height: 600px;
}

.vertical {
	flex-direction: column;
}

.tile {
	background-color: blue;
	background-size: cover;
	background-position: center;
	flex: 1 1 auto !important;
	margin: 0 10px 10px 0;
	position: relative;
	color: rgba(0,0,0,0);
	overflow: hidden;
}

.tile.rect-2x1 {
	flex: 0 1 auto !important;
}

.tile:last-child {
	margin-right :0;
}

.tile::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	opacity: 0;
	background: rgba(0,0,0,0.33);
	transition: opacity 0.2s;
	overflow: hidden;
}

.tile:hover {
	cursor: pointer;
}

.tile:hover::after {
	opacity: 1;
}

.margin-right {
	margin-right: 10px;
}

.tile-inner {
	position: absolute;
	z-index: 3;
	width: 100%;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	color: white;
	text-transform: uppercase;
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	transition: opacity 0.2s, transform 0.2s;
	text-align: center;
}

img.tile-inner {
	width: calc(100% - 20px);
	max-width: 100px;
}

img.inline-image-letter {
	display: inline;
	height: 1.2em;
	vertical-align: top;
}

.tile-lander {
	background-image: url('images/tile-lander.jpg');
}

.tile-portfolio {
	background-image: url('images/tile-portfolio.jpg');
}

.tile-friction {
	background-image: url('images/tile-friction.jpg');
	overflow: unset;
}

.overflow-hidden-inner {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.tile-upcoming {
	background-image: url('images/tile-upcoming.png');
}

.tile-shop {
	background-image: url('images/tile-shop.jpg');
}

.tile-patreon {
	background-image: url('images/tile-patreon.jpg');
	background-position: 50% 70%;
}

.tile-ko-fi {
	background-image: url('images/tile-ko-fi.jpg');
}

.hot-label {
	position: absolute;
	right: -35px;
	bottom: 50%;
	transform: translate(0, 50%);
	width: 70px;
	height: 100px;
	background: url('images/fire-symbol.png');
	background-size: cover;
	background-position: center;
	color: white;
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	text-align: center;
	text-transform: uppercase;
	font-size: 0.8em;
	z-index: 5;
	transition: opacity 0.2s;
}

.hot-label span {
	position: absolute;
	top: calc(50% + 10px);
	left: calc(50% - 2px);
	transform: translate(-50%, -50%);
}

.tile-friction:hover .hot-label {
	opacity: 1;
}

.credits {
	position: absolute;
	bottom: -15px;
	right: -25px;
	height: 50px;
	line-height: 50px;
	transform-origin: 100% 50%;
	transform: rotate(90deg);
	text-align: right;
}

.page {
	position: absolute;
	top: 200px;
	color: rgba(255,255,255,0.67);
	text-align: center;
	display: none;
	margin-bottom: 50px;
	padding: 50px;
}

.page a {
	text-decoration: none;
}

.page a:hover {
	opacity: 0.5;
}

.page::before {
	content: '';
	box-sizing: content-box;
	position: absolute;
	top: -20px;
	left: 50%;
	transform: translate(-50%, 0);
	width: 0;
	height: 0;
	border-left: 15px solid transparent;
	border-right: 15px solid transparent;
	border-bottom: 20px solid;
}

.page-icon {
	position: absolute;
	width: 100px;
	height: 100px;
	top: -130px;
	left: 50%;
	transform: translate(-50%, 0);
}

.close-x {
	position: absolute;
	width: 35px;
	height: 35px;
	top: -100px;
	right: 0;
	transform: rotate(45deg);
}

.close-x::before,
.close-x::after
{
	content: '';
	position: absolute;
}

.close-x::before {
	top: 0;
	left: 50%;
	width: 1.5px;
	height: 100%;
}

.close-x::after {
	left: 0;
	top: 50%;
	height: 1.5px;
	width: 100%;
}

.close-x:hover {
	opacity: 0.5;
}

.page .title {
	font-family: 'Montserrat', sans-serif;
	font-weight: 200;
	font-size: 28px;
	color: white;
}

.page .title img {
	width: 100%;
	max-width: 150px;
	margin-bottom: 30px;
}

.accent {
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
}

.page-images {
	width: calc(100% + 150px);
	margin-left: -75px;
	white-space: nowrap;
}

.page-labels
{
	width: calc(100% + 80px);
	margin-left: -40px;
}

.lander {
	background: linear-gradient(#3381ff, #32dfff);
}

.lander::before {
	border-bottom-color: #3381ff;
}

.lander .close-x::before,
.lander .close-x::after
{
	background: #3381ff;
}

.lander a {
	color: white;
	font-family: 'Montserrat', sans-serif;
	font-weight: 200;
	padding: 10px;
	border: 1px solid white;
	display: inline-block;
}

.lander .page-image,
.upcoming-info-sunburn .page-image
{
	width: 50%;
	display: inline;
}

.lander .page-label {
	font-size: 0.8em;
	text-align: center;
	display: inline;
}

.portfolio {
	background: linear-gradient(#dc3f51, #ffbe66);
	min-height: calc(100% - 300px);
}

.portfolio::before {
	border-bottom-color: #dc3f51;
}

.portfolio .close-x::before,
.portfolio .close-x::after
{
	background: #dc3f51;
}

.portfolio .center-center {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
}

.portfolio .portfolio-img {
	width: calc(100% + 160px);
	margin-left: -80px;
	margin-top: 20px;
	border: 10px solid cyan;
	border-image: linear-gradient(to bottom, cyan, yellow) 1 100%;
	background: rgba(255, 255, 255, 0.05);
	display: block;
}

.arrow {
	position: relative;
	margin-left: 50%;
	margin-bottom: -10px;
	width: 20px;
	height: 20px;
	border-left: 2px solid white;
	border-bottom: 2px solid white;
	transform: translate(-50%, 0) rotate(-45deg);
}

.friction {
	background: linear-gradient(#2d2d2d, #727272);
}

.friction::before {
	border-bottom-color: #2d2d2d;
}

.friction .close-x::before,
.friction .close-x::after
{
	background: #2d2d2d;
}

.friction a {
	color: white;
}

.friction .page-image {
	width: 100%;
	display: inline;
}

.friction .warning {
	width: 50px;
	height: 50px;
}

.buy-link {
	font-family: 'Montserrat', sans-serif;
	font-weight: 200;
	padding: 10px;
	color: #e35a55 !important;
	border: 1px solid #e35a55;
	display: inline-block;
	margin-bottom: 0.5em;
}

.upcoming {
	padding: 0;
}

.upcoming .close-x::before,
.upcoming .close-x::after
{
	background: #dc3f51;
}

.upcoming .title {
	top: -120px !important;
	color: #dc3f51;
	margin-bottom: 50px;
}

.upcoming a {
	color: #dc3f51;
}

.upcoming .previous a {
	color: rgba(0, 0, 0, 0.25);
	font-family: 'Montserrat';
	font-weight: 700;
	text-transform: uppercase;
	display: block;
}

.upcoming-banner {
	width: 100%;
	height: 100px;
	background-size: cover;
	background-position: center;
	margin-bottom: 10px;
}

.upcoming-banner:hover {
	opacity: 0.8;
}

.upcoming-aria {
	background-image: url('images/upcoming-aria-banner.jpg');
}

.upcoming-untitled {
	background-image: url('images/upcoming-untitled-banner.jpg');
	background-position: 50% 28%;
}

.upcoming-hd {
	background-image: url('images/upcoming-hd-banner.jpg');
}

.upcoming-abc {
	background-image: url('images/upcoming-abc-banner.jpg');
}

.upcoming-hd2 {
	background-image: url('images/upcoming-hd2-banner.jpg');
}

.upcoming-sunburn {
	background-image: url('images/upcoming-sunburn-banner.jpg');
}

.upcoming-info {
	color: rgba(0,0,0,0.33);
	border: 1px solid rgba(0,0,0,0.33);
	padding: 50px;
	margin-top: 30px;
	margin-bottom: 50px;
	position: relative;
	display: none;
	overflow: unset !important;
	opacity: 0;
	transition: opacity 0.2s;
}

.upcoming-info::before {
	content: '';
	position: absolute;
	width: 30px;
	height: 30px;
	top: -16px;
	left: 50%;
	transform: translate(-50%, 0) rotate(45deg);
	background: white;
	border: 1px solid rgba(0,0,0,0.33);
}

.upcoming-info::after {
	content: '';
	position: absolute;
	width: 100px;
	height: 30px;
	top: 0;
	left: 50%;
	transform: translate(-50%, 0);
	background: white;
}

.date {
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	padding: 10px;
	display: inline-block;
	text-transform: uppercase;
	background: #dc3f51;
	color: white;
	margin-top: 40px;
}

.upcoming-title {
	width: 100%;
	max-width: 200px;
	margin-bottom: 30px;
	z-index: 200;
}

.upcoming-extra {
	width: 100%;
	max-width: 300px;
}

.no-margin {
	margin: 0;
}

.cred {
	font-size: 0.7em;
	text-transform: uppercase;
	font-weight: bold;
}

@media screen and (min-width: 720px) {
	.half-height,
	.full-height
	{
		height: unset;
	}

	.header,
	.container,
	.page
	{
		max-width: 720px;
		width: calc(100% - 200px) !important;
	}

	.header {
		top: 75px;
	}

	.icon {
		left: -70px;
	}

	.breakpoint .logo {
	opacity: 0.33;
	}

	.breakpoint .logo.line {
		opacity: 0;
	}

	.breakpoint .icon.line {
		opacity: 1;
	}

	.breakpoint .icon.line.white {
		opacity: 0;
	}

	.container {
		min-height: 500px;
		height: calc(100% - 250px);
		margin-top: 50px;
		display: flex;
		flex-direction: column;
	}

	.section {
		flex: 0 1 auto;
	}

	.section.area {
		width: calc(50% - 5px);
	}

	.section.break {
		position: absolute;
		top: 0;
		right: 0;
		height: 100%;
	}

	.links {
		position: absolute;
		bottom: 20px;
		left: 10px;
		width: calc(100% - 20px);
	}

	.tile-inner {
		opacity: 0;
		transform: translate(-50%, calc(-50px - 50%));
	}

	.tile:hover .tile-inner {
		opacity: 1;
		transform: translate(-50%, -50%);
	}

	.hot-label {
		opacity: 0;
	}

	.credits {
		height: 100px;
		line-height: 100px;
		bottom: -40px;
		right: -50px;
	}

	.page {
		margin-bottom: 100px;
	}

	.portfolio .title,
	.upcoming .title
	{
		position: absolute;
		top: -100px;
		left: 0;
	}

	.lander .title {
		color: #3381ff;
	}

	.lander .title img {
		height: 100px;
		width: unset;
		max-width: unset;
	}

	.portfolio .title {
		color: #dc3f51;
	}

	.friction .warning {
		position: absolute;
		top: 38px;
		left: 38px;
	}

	.upcoming .title {
		width: 0px;
	}

	.upcoming-banner {
		height: 200px;
	}
}

